--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "name": "angular-fancy-modal",
   "email": "alessandro@arnodo.net",
   "url": "http://alessandro.arnodo.net",
-  "version": "0.1.3",
+  "version": "0.1.4",
   "homepage": "https://github.com/vesparny/angular-fancy-modal",
   "description": "the definitive modal/popup/dialog solution for AngularJS.",
   "license": "MIT",
@@ -16,13 +16,13 @@
     "browser-sync": "^1.1.2",
     "gulp": "^3.8.9",
     "gulp-bump": "^0.1.11",
-    "gulp-csso": "^0.2.9",
+    "gulp-csso": "^1.0.0",
     "gulp-header": "^1.2.2",
     "gulp-jshint": "^1.8.5",
     "gulp-load-plugins": "^0.7.0",
     "gulp-rename": "^1.2.0",
-    "gulp-ruby-sass": "^0.7.1",
-    "gulp-uglify": "^1.0.1",
+    "gulp-sass": "^2.0.1",
+    "gulp-uglify": "^1.2.0",
     "jshint-stylish": "^1.0.0",
     "karma": "^0.12.24",
     "karma-chrome-launcher": "^0.1.5",
