--- a/package.json
+++ b/package.json
@@ -13,25 +13,25 @@
     "url": "git@github.com:vesparny/angular-fancy-modal.git"
   },
   "devDependencies": {
-    "browser-sync": "^1.1.2",
-    "gulp": "^3.8.9",
-    "gulp-bump": "^0.1.11",
+    "browser-sync": "^2.7.1",
+    "gulp": "^3.8.11",
+    "gulp-bump": "^0.3.1",
     "gulp-csso": "^1.0.0",
     "gulp-header": "^1.2.2",
-    "gulp-jshint": "^1.8.5",
-    "gulp-load-plugins": "^0.7.0",
-    "gulp-rename": "^1.2.0",
+    "gulp-jshint": "^1.10.0",
+    "gulp-load-plugins": "^0.10.0",
+    "gulp-rename": "^1.2.2",
     "gulp-sass": "^2.0.1",
     "gulp-uglify": "^1.2.0",
-    "jshint-stylish": "^1.0.0",
-    "karma": "^0.12.24",
-    "karma-chrome-launcher": "^0.1.5",
-    "karma-coverage": "^0.2.6",
-    "karma-jasmine": "^0.1.5",
-    "karma-mocha-reporter": "^0.3.1",
+    "jshint-stylish": "^1.0.2",
+    "karma": "0.12.28",
+    "karma-chrome-launcher": "^0.1.12",
+    "karma-coverage": "^0.3.1",
+    "karma-jasmine": "^0.3.5",
+    "karma-mocha-reporter": "^1.0.2",
     "karma-phantomjs-launcher": "^0.1.4",
-    "lodash": "^2.4.1",
-    "run-sequence": "^1.0.1"
+    "lodash": "^3.9.1",
+    "run-sequence": "^1.1.0"
   },
   "engines": {
     "node": ">=0.10.x"
